<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Usermanual" >


    <TextView
        android:id="@+id/um"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uml2"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:text="@string/inst"
        android:textColor="@color/white"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/uml1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/um"
        android:layout_below="@+id/um"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/imageButton1"
        android:ems="5"
        android:text="@string/uml1"
        android:textColor="@color/white"
        android:textSize="15sp" />
    
    

    <TextView
        android:id="@+id/uml2"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/uml1"
        android:ems="5"
        android:text="@string/uml2"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/uml3"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uml2"
        android:layout_below="@+id/uml2"
        android:ems="5"
        android:text="@string/uml3"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/uml4"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uml3"
        android:layout_below="@+id/uml3"
        android:ems="5"
        android:text="@string/uml4"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/uml5"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uml4"
        android:layout_below="@+id/uml4"
        android:ems="5"
        android:text="@string/uml5"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/uml6"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uml5"
        android:layout_below="@+id/uml5"
        android:ems="5"
        android:text="@string/uml6"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/uml7"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uml6"
        android:layout_below="@+id/uml6"
        android:ems="5"
        android:text="@string/uml7"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/uml8"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uml7"
        android:layout_below="@+id/uml7"
        android:ems="5"
        android:text="@string/uml8"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/uml9"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uml8"
        android:layout_below="@+id/uml8"
        android:ems="5"
        android:text="@string/uml9"
        android:textColor="@color/white"
        android:textSize="15sp" />

      <ImageButton
          android:id="@+id/imageButton1"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentBottom="true"
          android:layout_alignRight="@+id/uml9"
          android:adjustViewBounds="true"
          android:maxHeight="70dp"
          android:maxWidth="150dp"
          android:onClick="onClickNext"
          android:scaleType="fitCenter"
          android:src="@drawable/nextarrow" />

</RelativeLayout>